--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,20 @@
+#app {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .App {
-  height: 83vh;
+  height: 86vh;
+  width: 86vw;
   overflow: hidden;
-  padding: 80px 150px;
-  vertical-align: middle;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.app-container {
+    display: flex;
+    height: 100%;
 }
